--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -124,3 +124,10 @@
     /* flex-direction: column; */
   }
 }
+
+/* ==========================================================================
+   Author's custom styles
+   ========================================================================== */
+
+
+
