--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -121,6 +121,12 @@
 .image {
   width: 250px;
   max-height: 400px;
+  border-radius: 24px;
+}
+
+.swipeimage {
+  width: 250px;
+  max-height: 400px;  
 }
 
 @media (max-width: 600px) {
@@ -131,8 +137,21 @@
 }
 
 /* ==========================================================================
-   Author's custom styles
+    Eric styles
    ========================================================================== */
 
+.container {}
 
+/* Adding rows & columns */
+.column {
+  float: left;
+  width: 50%;
+  padding: 3px;
+}
 
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
