--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,12 @@
   align-items: center;
 }
 
+.button {
+  border-radius:8px !important;
+  height: 1rem;
+  width: 2rem;
+}
+
 .colorbutton {
   border-radius:8px !important;
   background-image: linear-gradient(#3DCDC7, #33AFAA 85%) !important;
@@ -124,9 +130,50 @@
   height: 1em;
 }
 
+.activity {
+  /* width: 87.2%; */
+}
+
+.activityCard {
+  /* position: relative; */
+  text-align: justify;
+}
+
+.activitySection {
+  color: white;
+  position: absolute;
+  transform: translate(9%, -130%);
+  width: 70%;
+  /* background-color: grey; */
+}
+
+.activityDescription {
+  margin: 0.75rem 0 0 0;
+  line-height: 1.375rem;
+}
+
+.activityTitle {
+  margin: 0;
+}
+
+.activityBackground {
+  background: rgba(0,0,0,0.3);
+  border-radius: 1rem;
+  width: 80%;
+  height: 16%;
+  transform: translate(4.5%, -113%);
+  position: absolute;
+  backdrop-filter: blur(8px);
+}
+
+.activityImage {
+  border-radius: 1.5rem;
+  height: 32.5rem;
+  width: 20.4375rem;
+}
+
 .image {
-  width: 250px;
-  max-height: 400px;
+  border-radius: 24px;
 }
 
 @media (max-width: 600px) {
