--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,8 +14,8 @@
 }
 
 .colorbutton {
-  border-radius:8px !important;
-  background-image: linear-gradient(#3DCDC7, #33AFAA 85%) !important;
+  border-radius:24px !important;
+  background-image: #FF7078 !important;
   color:white !important;
 }
 
