--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #325370;
 }
 
 .button {
@@ -14,9 +15,10 @@
 }
 
 .colorbutton {
-  border-radius:8px !important;
-  background-image: linear-gradient(#3DCDC7, #33AFAA 85%) !important;
+  border-radius:24px !important;
+  background-image:linear-gradient(to bottom, #FF7078, #FF7078);
   color:white !important;
+  font-size: 16px !important;
 }
 
 .main {
