--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -116,6 +116,7 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
+
 .input {
   margin: 0.25rem;
 }
@@ -201,8 +202,6 @@
 
 .container2 {
   width: 100%;
-  padding-right: var(--bs-gutter-x, 0.75rem);
-  padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
 }
@@ -281,4 +280,25 @@
   font-family: "Roboto";
   src: url('/fonts/Roboto-Light.ttf');
   font-weight: 300;
+}
+
+.pinkbutton {
+  border-radius: 24px !important;
+  background-image: linear-gradient(#FF7078, #FF7078 100%) !important;
+  color: #ffffff !important;
+  height: 45px;
+  width: 150px;
+  text-align: center;
+}
+
+.cardCenter {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
