--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,7 +16,7 @@
 
 .colorbutton {
   border-radius:24px !important;
-  background-image:linear-gradient(to bottom, #FF7078, #FF7078);
+  background-image:linear-gradient(to bottom, #FF7078, #FF7078) !important;
   color:white !important;
   font-size: 16px !important;
 }
