--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -208,11 +208,16 @@
 
 .containercard {
   width: 100%;
+  height: 52%;
   background-color: #325370;
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
   margin-right: auto;
   margin-left: auto;
+  position: absolute;
+  bottom: 0;
+  border-radius: 24px 24px 0px 0px !important;
+
 }
 
 /* Adding rows & columns */
@@ -234,11 +239,11 @@
   position: inherit;
   top: 80px;
   -ms-transform: translateY(-50%);
-  transform: translateY(-20%);
+  transform: translateY(-24%);
 }
 
 .tagline {
-  font-size: 20px;
+  font-size: 22px;
   line-height: 23px;
   text-align: center;
   color: #325370;
@@ -286,9 +291,12 @@
   border-radius: 24px !important;
   background-image: linear-gradient(#FF7078, #FF7078 100%) !important;
   color: #ffffff !important;
-  height: 45px;
-  width: 150px;
-  text-align: center;
+  height: 45px !important;
+  width: 194px;
+  text-align: center !important;
+  font-size: 20px !important;
+  transform: translateY(50%);
+  display: inline;
 }
 
 .cardCenter {
@@ -301,4 +309,22 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.grid2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-top: 3rem;
+  flex-direction: column;
+  transform: translateY(-10%);
+}
+
+@media (max-width: 600px) {
+  .gri2 {
+    width: 100%;
+    /* flex-direction: column; */
+  }
 }
