Fix image height on complete page

--- a/styles/akshay.module.css
+++ b/styles/akshay.module.css
@@ -50,3 +50,11 @@
   margin: 20px;
   text-align: center;
 }
+
+.completeHeader {
+  transform: translateY(-250%);
+}
+
+.emptyDiv {
+  height: 7rem;
+}
